base.html updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <header>
         <h1>Expense Tracker</h1>
         <nav>
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('add_entry') }}">Add Entry</a>
+            <a class="btn btn-primary" href="{{ url_for('index') }}">Home</a>
+            <a class="btn btn-success" href="{{ url_for('add_entry') }}">Add Entry</a>
         </nav>
     </header>
     <main>
