--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,10 @@ header {
     text-align: center;
 }
 
+h1{
+    color: rgb(0, 0, 0);
+}
+
 nav a {
     color: white;
     text-decoration: none;
@@ -24,7 +28,10 @@ nav a {
 }
 
 main {
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
 }
 
 table {
