--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,14 @@ main {
     padding: 2em;
 }
 
+section {
+    background-color: #f7f7f7;
+    padding: 2em;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
