style.css updated

--- a/static/styles.css
+++ b/static/styles.css
@@ -83,3 +83,8 @@ th, td {
     background-color: #337ab7;
     color: #fff;
 }
+
+.btn-success {
+    background-color: #5cb85c;
+    color: #fff;
+}
