--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #e7e2e2;
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -17,7 +17,7 @@ h1{
 }
 
 nav a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     margin: 0 10px;
     background-color: #a87e7e;
