--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <title>Expense Tracker</title>
+</head>
 <main>
     <section>
         {% extends 'base.html' %}
